# kafka-bazel

./: .bazelrc  .bazelversion  .gitignore  .gitmodules  README.md  apache_kafka.patch  copy.bara.sky  helpers.bara.sky  service.yml
.github/: CODEOWNERS
kafka-bazel/: .bazelrc  .gitignore  WORKSPACE.bazel  configure.bzl  overlay_directories.py
kafka-bazel/.bazel/bazelrc/: ci.bazelrc  common.bazelrc  java.bazelrc
kafka-bazel/kafka-overlay/: .bazelrc  BUILD.bazel
kafka-bazel/kafka-overlay/checkstyle/: BUILD.bazel  checkstyle.bzl  update_checkstyle_bazel.sh
kafka-bazel/kafka-overlay/clients/: BUILD.bazel  generated_test_args.bzl
kafka-bazel/kafka-overlay/config/: BUILD.bazel
kafka-bazel/kafka-overlay/connect/api/: BUILD.bazel
kafka-bazel/kafka-overlay/connect/basic-auth-extension/: BUILD.bazel
kafka-bazel/kafka-overlay/connect/file/: BUILD.bazel  generated_test_args.bzl
kafka-bazel/kafka-overlay/connect/json/: BUILD.bazel
kafka-bazel/kafka-overlay/connect/mirror/: BUILD.bazel  generated_test_args.bzl
kafka-bazel/kafka-overlay/connect/mirror-client/: BUILD.bazel
kafka-bazel/kafka-overlay/connect/runtime/: BUILD.bazel  generated_test_args.bzl  openapi-config.yaml
kafka-bazel/kafka-overlay/connect/test-plugins/: BUILD.bazel
kafka-bazel/kafka-overlay/connect/transforms/: BUILD.bazel
kafka-bazel/kafka-overlay/coordinator-common/: BUILD.bazel
kafka-bazel/kafka-overlay/core/: BUILD.bazel  generated_test_args.bzl
kafka-bazel/kafka-overlay/dependencies/: BUILD.bazel  dependencies.bzl  maven_alt_easymock_4_3_install.json  maven_alt_mockito_4_11_install.json  maven_alt_mockito_4_9_install.json  maven_compile_only_install.json  maven_install.json  maven_kafka_streams_0100_install.json  maven_kafka_streams_0101_install.json  maven_kafka_streams_0102_install.json  maven_kafka_streams_0110_install.json  maven_kafka_streams_10_install.json  maven_kafka_streams_11_install.json  maven_kafka_streams_20_install.json  maven_kafka_streams_21_install.json  maven_kafka_streams_22_install.json  maven_kafka_streams_23_install.json  maven_kafka_streams_24_install.json  maven_kafka_streams_25_install.json  maven_kafka_streams_26_install.json  maven_kafka_streams_27_install.json  maven_kafka_streams_28_install.json  maven_kafka_streams_30_install.json  maven_kafka_streams_31_install.json  maven_kafka_streams_32_install.json  maven_kafka_streams_33_install.json  maven_kafka_streams_34_install.json  maven_kafka_streams_35_install.json  maven_kafka_streams_36_install.json  maven_kafka_streams_37_install.json
kafka-bazel/kafka-overlay/generator/: BUILD.bazel
kafka-bazel/kafka-overlay/gradle/: BUILD.bazel
kafka-bazel/kafka-overlay/group-coordinator/: BUILD.bazel
kafka-bazel/kafka-overlay/group-coordinator/group-coordinator-api/: BUILD.bazel
kafka-bazel/kafka-overlay/include/: BUILD.bazel
kafka-bazel/kafka-overlay/jmh-benchmarks/: BUILD.bazel
kafka-bazel/kafka-overlay/licenses/: BUILD.bazel
kafka-bazel/kafka-overlay/log4j-appender/: BUILD.bazel
kafka-bazel/kafka-overlay/metadata/: BUILD.bazel
kafka-bazel/kafka-overlay/raft/: BUILD.bazel  generated_test_args.bzl
kafka-bazel/kafka-overlay/rules/jvm/: jvm_junit_test_suite.bzl  release_tar.bzl
kafka-bazel/kafka-overlay/server/: BUILD.bazel
kafka-bazel/kafka-overlay/server-common/: BUILD.bazel
kafka-bazel/kafka-overlay/share/: BUILD.bazel
kafka-bazel/kafka-overlay/shell/: BUILD.bazel  generated_test_args.bzl
kafka-bazel/kafka-overlay/storage/: BUILD.bazel  generated_test_args.bzl
kafka-bazel/kafka-overlay/storage/api/: BUILD.bazel
kafka-bazel/kafka-overlay/streams/: BUILD.bazel  generated_test_args.bzl
kafka-bazel/kafka-overlay/streams/examples/: BUILD.bazel  generated_test_args.bzl
kafka-bazel/kafka-overlay/streams/streams-scala/: BUILD.bazel  generated_test_args.bzl
kafka-bazel/kafka-overlay/streams/test-utils/: BUILD.bazel
kafka-bazel/kafka-overlay/streams/upgrade-system-tests-0100/: BUILD.bazel
kafka-bazel/kafka-overlay/streams/upgrade-system-tests-0101/: BUILD.bazel
kafka-bazel/kafka-overlay/streams/upgrade-system-tests-0102/: BUILD.bazel
kafka-bazel/kafka-overlay/streams/upgrade-system-tests-0110/: BUILD.bazel
kafka-bazel/kafka-overlay/streams/upgrade-system-tests-10/: BUILD.bazel
kafka-bazel/kafka-overlay/streams/upgrade-system-tests-11/: BUILD.bazel
kafka-bazel/kafka-overlay/streams/upgrade-system-tests-20/: BUILD.bazel
kafka-bazel/kafka-overlay/streams/upgrade-system-tests-21/: BUILD.bazel
kafka-bazel/kafka-overlay/streams/upgrade-system-tests-22/: BUILD.bazel
kafka-bazel/kafka-overlay/streams/upgrade-system-tests-23/: BUILD.bazel
kafka-bazel/kafka-overlay/streams/upgrade-system-tests-24/: BUILD.bazel
kafka-bazel/kafka-overlay/streams/upgrade-system-tests-25/: BUILD.bazel
kafka-bazel/kafka-overlay/streams/upgrade-system-tests-26/: BUILD.bazel
kafka-bazel/kafka-overlay/streams/upgrade-system-tests-27/: BUILD.bazel
kafka-bazel/kafka-overlay/streams/upgrade-system-tests-28/: BUILD.bazel
kafka-bazel/kafka-overlay/streams/upgrade-system-tests-30/: BUILD.bazel
kafka-bazel/kafka-overlay/streams/upgrade-system-tests-31/: BUILD.bazel
kafka-bazel/kafka-overlay/streams/upgrade-system-tests-32/: BUILD.bazel
kafka-bazel/kafka-overlay/streams/upgrade-system-tests-33/: BUILD.bazel
kafka-bazel/kafka-overlay/streams/upgrade-system-tests-34/: BUILD.bazel
kafka-bazel/kafka-overlay/streams/upgrade-system-tests-35/: BUILD.bazel
kafka-bazel/kafka-overlay/streams/upgrade-system-tests-36/: BUILD.bazel
kafka-bazel/kafka-overlay/toolchains/: BUILD.bazel
kafka-bazel/kafka-overlay/tools/: BUILD.bazel  generated_test_args.bzl
kafka-bazel/kafka-overlay/tools-bazel/: 1_oci.patch  BUILD.bazel  bazel_full_test_suite.yml  bazel_stamp_vars.sh  bazel_tag_reader.py  copy_bazel_jars.sh  copy_system_test_jars.bzl  gen_docs.bzl  library_wrappers.bzl  message_generator.bzl  message_generator.sh  pom.tpl  pom_clients.tpl  version_file.bzl
kafka-bazel/kafka-overlay/transaction-coordinator/: BUILD.bazel
kafka-bazel/kafka-overlay/trogdor/: BUILD.bazel  generated_test_args.bzl
(+15 files in other folders)
